builds/tests/334/data/attachments/acbdebdf8ac86074.txt
2026-06-14 17:11:52,150 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-06-14 17:11:52,151 INFO     yoyo.migrations —  - applying step 0
2026-06-14 17:11:52,151 INFO     yoyo.migrations —  - applying step 1
2026-06-14 17:11:52,151 INFO     yoyo.migrations —  - applying step 2
2026-06-14 17:11:52,151 INFO     yoyo.migrations —  - applying step 3
2026-06-14 17:11:52,151 INFO     yoyo.migrations —  - applying step 4
2026-06-14 17:11:52,152 INFO     yoyo.migrations —  - applying step 5
2026-06-14 17:11:52,152 INFO     yoyo.migrations —  - applying step 6
2026-06-14 17:11:52,152 INFO     yoyo.migrations —  - applying step 7
2026-06-14 17:11:52,152 INFO     yoyo.migrations —  - applying step 8
2026-06-14 17:11:52,152 INFO     yoyo.migrations —  - applying step 9
2026-06-14 17:11:52,153 INFO     yoyo.migrations —  - applying step 10
2026-06-14 17:11:52,153 INFO     yoyo.migrations —  - applying step 11
2026-06-14 17:11:52,153 INFO     yoyo.migrations —  - applying step 12
2026-06-14 17:11:52,153 INFO     yoyo.migrations —  - applying step 13
2026-06-14 17:11:52,153 INFO     yoyo.migrations —  - applying step 14
2026-06-14 17:11:52,155 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-06-14 17:11:52,156 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-06-14 17:11:52,156 INFO     yoyo.migrations —  - applying step 0
2026-06-14 17:11:52,156 INFO     yoyo.migrations —  - applying step 1
2026-06-14 17:11:52,158 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-06-14 17:11:52,158 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-06-14 17:11:52,158 INFO     yoyo.migrations —  - applying step 0
2026-06-14 17:11:52,160 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-06-14 17:11:52,160 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-06-14 17:11:52,161 INFO     yoyo.migrations —  - applying step 0
2026-06-14 17:11:52,161 INFO     yoyo.migrations —  - applying step 1
2026-06-14 17:11:52,161 INFO     yoyo.migrations —  - applying step 2
2026-06-14 17:11:52,161 INFO     yoyo.migrations —  - applying step 3
2026-06-14 17:11:52,162 INFO     yoyo.migrations —  - applying step 4
2026-06-14 17:11:52,162 INFO     yoyo.migrations —  - applying step 5
2026-06-14 17:11:52,162 INFO     yoyo.migrations —  - applying step 6
2026-06-14 17:11:52,162 INFO     yoyo.migrations —  - applying step 7
2026-06-14 17:11:52,162 INFO     yoyo.migrations —  - applying step 8
2026-06-14 17:11:52,163 INFO     yoyo.migrations —  - applying step 9
2026-06-14 17:11:52,163 INFO     yoyo.migrations —  - applying step 10
2026-06-14 17:11:52,163 INFO     yoyo.migrations —  - applying step 11
2026-06-14 17:11:52,164 INFO     yoyo.migrations —  - applying step 12
2026-06-14 17:11:52,164 INFO     yoyo.migrations —  - applying step 13
2026-06-14 17:11:52,164 INFO     yoyo.migrations —  - applying step 14
2026-06-14 17:11:52,164 INFO     yoyo.migrations —  - applying step 15
2026-06-14 17:11:52,165 INFO     yoyo.migrations —  - applying step 16
2026-06-14 17:11:52,165 INFO     yoyo.migrations —  - applying step 17
2026-06-14 17:11:52,166 INFO     yoyo.migrations —  - applying step 18
2026-06-14 17:11:52,166 INFO     yoyo.migrations —  - applying step 19
2026-06-14 17:11:52,166 INFO     yoyo.migrations —  - applying step 20
2026-06-14 17:11:52,166 INFO     yoyo.migrations —  - applying step 21
2026-06-14 17:11:52,166 INFO     yoyo.migrations —  - applying step 22
2026-06-14 17:11:52,168 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-06-14 17:11:52,169 INFO     yoyo.migrations — Applying 0005_income_logging
2026-06-14 17:11:52,169 INFO     yoyo.migrations —  - applying step 0
2026-06-14 17:11:52,169 INFO     yoyo.migrations —  - applying step 1
2026-06-14 17:11:52,169 INFO     yoyo.migrations —  - applying step 2
2026-06-14 17:11:52,170 INFO     yoyo.migrations —  - applying step 3
2026-06-14 17:11:52,171 INFO     yoyo.migrations —  - applying step 4
2026-06-14 17:11:52,171 INFO     yoyo.migrations —  - applying step 5
2026-06-14 17:11:52,171 INFO     yoyo.migrations —  - applying step 6
2026-06-14 17:11:52,171 INFO     yoyo.migrations —  - applying step 7
2026-06-14 17:11:52,172 INFO     yoyo.migrations —  - applying step 8
2026-06-14 17:11:52,172 INFO     yoyo.migrations —  - applying step 9
2026-06-14 17:11:52,172 INFO     yoyo.migrations —  - applying step 10
2026-06-14 17:11:52,172 INFO     yoyo.migrations —  - applying step 11
2026-06-14 17:11:52,172 INFO     yoyo.migrations —  - applying step 12
2026-06-14 17:11:52,172 INFO     yoyo.migrations —  - applying step 13
2026-06-14 17:11:52,172 INFO     yoyo.migrations —  - applying step 14
2026-06-14 17:11:52,173 INFO     yoyo.migrations —  - applying step 15
2026-06-14 17:11:52,173 INFO     yoyo.migrations —  - applying step 16
2026-06-14 17:11:52,173 INFO     yoyo.migrations —  - applying step 17
2026-06-14 17:11:52,173 INFO     yoyo.migrations —  - applying step 18
2026-06-14 17:11:52,173 INFO     yoyo.migrations —  - applying step 19
2026-06-14 17:11:52,173 INFO     yoyo.migrations —  - applying step 20
2026-06-14 17:11:52,173 INFO     yoyo.migrations —  - applying step 21
2026-06-14 17:11:52,174 INFO     yoyo.migrations —  - applying step 22
2026-06-14 17:11:52,174 INFO     yoyo.migrations —  - applying step 23
2026-06-14 17:11:52,174 INFO     yoyo.migrations —  - applying step 24
2026-06-14 17:11:52,174 INFO     yoyo.migrations —  - applying step 25
2026-06-14 17:11:52,174 INFO     yoyo.migrations —  - applying step 26
2026-06-14 17:11:52,174 INFO     yoyo.migrations —  - applying step 27
2026-06-14 17:11:52,174 INFO     yoyo.migrations —  - applying step 28
2026-06-14 17:11:52,175 INFO     yoyo.migrations —  - applying step 29
2026-06-14 17:11:52,175 INFO     yoyo.migrations —  - applying step 30
2026-06-14 17:11:52,175 INFO     yoyo.migrations —  - applying step 31
2026-06-14 17:11:52,175 INFO     yoyo.migrations —  - applying step 32
2026-06-14 17:11:52,175 INFO     yoyo.migrations —  - applying step 33
2026-06-14 17:11:52,176 INFO     yoyo.migrations —  - applying step 34
2026-06-14 17:11:52,178 INFO     yoyo.migrations —  - applying step 35
2026-06-14 17:11:52,178 INFO     yoyo.migrations —  - applying step 36
2026-06-14 17:11:52,178 INFO     yoyo.migrations —  - applying step 37
2026-06-14 17:11:52,178 INFO     yoyo.migrations —  - applying step 38
2026-06-14 17:11:52,180 INFO     yoyo.migrations —  - applying step 39
2026-06-14 17:11:52,181 INFO     yoyo.migrations —  - applying step 40
2026-06-14 17:11:52,183 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-06-14 17:11:52,184 INFO     yoyo.migrations — Applying 0006_category_templates
2026-06-14 17:11:52,184 INFO     yoyo.migrations —  - applying step 0
2026-06-14 17:11:52,188 INFO     yoyo.migrations — Marking 0006_category_templates applied
2026-06-14 17:11:52,194 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-06-14 17:11:52,195 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 246, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/asyncio/threads.py", line 25, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 540, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
